[gd_scene load_steps=2 format=3 uid="uid://c72nfn8f33v6g"]

[ext_resource type="Script" path="res://common/scanner/enemy_scanner.gd" id="1_74mdr"]

[node name="EnemyScanner" type="Area2D" groups=["scanner"]]
collision_layer = 0
collision_mask = 4
monitorable = false
script = ExtResource("1_74mdr")

[node name="Area" type="CollisionShape2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
